--- a/styles.css
+++ b/styles.css
@@ -7,36 +7,35 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
 .hidden {
     display: none;
 }
 
-#intro, #main {
+#intro {
     text-align: center;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 90%;
-    margin: 10px;
 }
 
 #intro img {
-    width: 100px;
+    width: 300px;
     cursor: pointer;
+}
+
+#main {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
     color: #ff66b2;
-    font-size: 24px;
 }
 
 button {
@@ -60,14 +59,9 @@ button:hover {
     background: none;
 }
 
-#timer {
-    font-size: 18px;
-    background: none;
-}
-
 #pandaImage {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     margin: 20px auto;
     display: block;
     animation: bounce 2s infinite;
@@ -79,29 +73,5 @@ button:hover {
     }
     50% {
         transform: translateY(-20px);
-    }
-}
-
-/* Responsiveness for smaller screens */
-@media (min-width: 768px) {
-    #intro img {
-        width: 300px;
-    }
-
-    #pandaImage {
-        width: 150px;
-        height: 150px;
-    }
-
-    h1 {
-        font-size: 36px;
-    }
-
-    #message {
-        font-size: 30px;
-    }
-
-    #timer {
-        font-size: 20px;
     }
 }
